// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Segmented > render options 1`] = `
<div
  aria-label="segmented control"
  class="ant-segmented"
  role="radiogroup"
  tabindex="0"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        aria-selected="true"
        class="ant-segmented-item-label"
        title="Daily"
      >
        Daily
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        aria-selected="false"
        class="ant-segmented-item-label"
        title="Weekly"
      >
        Weekly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        aria-selected="false"
        class="ant-segmented-item-label"
        title="Monthly"
      >
        Monthly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        aria-selected="false"
        class="ant-segmented-item-label"
        title="Quarterly"
      >
        Quarterly
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        aria-selected="false"
        class="ant-segmented-item-label"
        title="Yearly"
      >
        Yearly
      </div>
    </label>
  </div>
</div>
`;

exports[`Segmented > render options with ellipsis 1`] = `
<div
  aria-label="segmented control"
  class="ant-segmented ant-segmented-block"
  role="radiogroup"
  tabindex="0"
>
  <div
    class="ant-segmented-group"
  >
    <label
      class="ant-segmented-item ant-segmented-item-selected"
    >
      <input
        checked=""
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        aria-selected="true"
        class="ant-segmented-item-label"
        title="123"
      >
        123
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        aria-selected="false"
        class="ant-segmented-item-label"
        title="456"
      >
        456
      </div>
    </label>
    <label
      class="ant-segmented-item"
    >
      <input
        class="ant-segmented-item-input"
        name="test-id"
        type="radio"
      />
      <div
        aria-selected="false"
        class="ant-segmented-item-label"
      >
        <div
          class="ant-flex ant-flex-align-center ant-flex-justify-center"
          style="gap: 4px;"
        >
          <span
            aria-describedby="test-id"
            class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line"
          >
            longtext
          </span>
        </div>
      </div>
    </label>
  </div>
</div>
`;
